[tool.poetry]
name = "ebpf-sse"
version = "0.1.0"
description = ""
authors = ["vvanglro"]
readme = "README.md"
packages = [{include = "ebpf_sse"}]

[tool.poetry.dependencies]
python = "^3.8"
sse-starlette = "^1.2.1"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
